# FlyingSimulator

./: CMakeLists.txt  README.md  output.txt
Output/: graph_fi_dt.txt  graph_gamma_dt.txt  graph_omega_x_dt.txt  graph_omega_y_dt.txt  graph_omega_z_dt.txt  graph_psi_dt.txt
include/: Camera.h  ChangeMetrics.h  Constants.h  EBO.h  Mesh.h  Model.h  Shader.h  SolveEquations.h  Texture.h  VAO.h  VBO.h  json.h
src/: ChangeMetrics.cpp  ChangeMetrics.h  QuaternionLib.cpp  QuaternionLib.h  SolveEquations.cpp  SolveEquations.h  default.frag  default.vert  main.cpp
src/Headers/: ChangeMetrics.h  QuaternionLib.h  SolveEquations.h
src/SOIL_SRC/: SOIL2.c  image_DXT.c  image_helper.c  wfETC.c
src/frags/: default.frag
src/graphics/: Camera.cpp  EBO.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
src/math/: ChangeMetrics.cpp  QuaternionLib.cpp  SolveEquations.cpp
src/utils/: Constants.cpp
src/verts/: default.vert
